# nds

./: Cargo.toml  README.md
.cargo/: armv5te-nintendo-ds.json  armv5te-nintendo-dsi.json  config.toml
nds/: Cargo.toml
nds/examples/: console_ansi.rs  console_both.rs  hello_world.rs
nds/src/: lib.rs
nds_core/: Cargo.toml
nds_core/src/: allocator.rs  background.rs  console.rs  input.rs  interrupt.rs  lib.rs  math.rs  process.rs  system.rs  video.rs
nds_proc/: Cargo.toml
nds_proc/src/: lib.rs
nds_std/: Cargo.toml
nds_std/src/: lib.rs  ops.rs
nds_std/src/sync/: arc.rs  atomic.rs  mod.rs  mutex.rs
nds_std/src/thread/: mod.rs
nds_sys/: Cargo.toml  build.rs
nds_sys/src/: lib.rs
